--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 	<title>Juan Ordonez</title>
 </head>
 <body>
-I'm writing some text!
+<h1>Header One</h1>
+<h2>Header Two</h2>
+<h1>Header One part dos</h1>
+<p> This is a mandatory paragraphy</p>
+<p>I'm writing <em>some</em> text!</p>
+<strong><p> another line of text</p></strong>
 </body>
 </html>
