--- a/index.html
+++ b/index.html
@@ -10,5 +10,18 @@
 <p> This is a mandatory paragraphy</p>
 <p>I'm writing <em>some</em> text!</p>
 <strong><p> another line of text</p></strong>
+<img src="https://s-media-cache-ak0.pinimg.com/736x/5b/e3/90/5be3902970a2eabc0433caeca1b2f3da.jpg">
+<table>
+    <tr>
+        <td>Apple</td>
+        <td>Banana</td>
+        <td>Orange</td>
+    </tr>
+    <tr>
+        <td>Kiwi</td>
+        <td>Strawberry</td>
+        <td>Papaya</td>
+    </tr>
+    </table>
 </body>
 </html>
