--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Juan Ordonez</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <h1>Header One</h1>
