new colors again

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h1>Header One</h1>
+<h1 class="spotlight">Header One</h1>
 <h2>Header Two</h2>
 <h1>Header One part dos</h1>
-<p> This is a mandatory paragraphy</p>
+<p id="intro"> This is a mandatory paragraphy</p>
 <p>I'm writing <em>some</em> text!</p>
 <strong><p> another line of text</p></strong>
 <img src="https://s-media-cache-ak0.pinimg.com/736x/5b/e3/90/5be3902970a2eabc0433caeca1b2f3da.jpg">
