--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
 <h1 class="spotlight">Header One</h1>
 <h2>Header Two</h2>
 <h1>Header One part dos</h1>
-<p id="intro"> This is a mandatory paragraphy</p>
+<p id="intro"> This is a mandatory <a href="https://www.instagram.com/p/BS3vPLxg7l8/?taken-by=nukanchik">paragraph</a></p>
 <p>I'm writing <em>some</em> text!</p>
-<strong><p> another line of text</p></strong>
+<strong><p> another line of <a href="https://www.instagram.com/p/BRdqB73g1a0/?taken-by=nukanchik">text</a></p></strong>
 <img src="https://s-media-cache-ak0.pinimg.com/736x/5b/e3/90/5be3902970a2eabc0433caeca1b2f3da.jpg">
+<ol>
+	<li>Red</li>
+	<li>Blue</li>
+	<li>Green</li>
+</ol>
+<ul>
+	<li><a href="https://www.instagram.com/p/BTmhPPxA6fd/?taken-by=nukanchik">Yellow</a></li>
+	<li>Orange</li>
+	<li>Pink</li>
+</ul>
 <table>
     <tr>
         <td>Apple</td>
